--- a/index.htm
+++ b/index.htm
@@ -168,7 +168,7 @@
                             <div>
                                 <h3 class="text-2xl font-bold text-navy mb-2">A Lacuna no Feedback Construtivo</h3>
                                 <p class="text-gray-700 mb-4">Apenas 38% concordam totalmente que existe uma cultura de feedback. A falta de processos formais e informais para conversas de desenvolvimento é uma fragilidade que limita o crescimento individual e coletivo, mesmo que as relações interpessoais sejam boas.</p>
-                                <p class="text-gray-700 font-semibold">Isto sugere que a comunicação positiva é reativa (pedir ajuda), mas não proativa (oferecer feedback para melhoria).</p>
+                                <p class="text-gray-700 font-semibold">Isto sugere que a cultura de feedback não está efetivamente implementada.</p>
                             </div>
                             <div class="chart-container">
                                 <canvas id="feedbackChart"></canvas>
