--- a/index.htm
+++ b/index.htm
@@ -102,7 +102,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-lg flex flex-col justify-center items-center">
                     <h3 class="stat-card text-orange">34,6%</h3>
                     <p class="text-lg font-bold mt-2 text-navy">Exposição ao Assédio</p>
-                    <p class="mt-2 text-sm text-gray-600 text-center">Proporção alarmante de colaboradores que já testemunharam ou sofreram assédio no trabalho.</p>
+                    <p class="mt-2 text-sm text-gray-600 text-center">Ao serem perguntados se já testemunharam ou sofreram assédio no ambiente de trabalho, 34,6% afirmaram que sim.</p>
                 </div>
                 <div class="bg-white p-6 rounded-xl shadow-lg flex flex-col justify-center items-center">
                     <h3 class="stat-card text-blue">91%</h3>
@@ -453,3 +453,4 @@
     </script>
 </body>
 </html>
+
