--- a/index.htm
+++ b/index.htm
@@ -121,7 +121,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-lg flex flex-col justify-center items-center">
                     <h3 class="stat-card text-blue">91%</h3>
                     <p class="text-lg font-bold mt-2 text-navy">Apoio entre Colegas</p>
-                    <p class="mt-2 text-sm text-gray-600 text-center">Colaboradores se sentem confortáveis para pedir ajuda, indicando forte coesão nas equipes.</p>
+                    <p class="mt-2 text-sm text-gray-600 text-center">Pessoas servidoras se sentem confortáveis para pedir ajuda, indicando forte coesão nas equipes.</p>
                 </div>
             </div>
              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 items-center">
@@ -142,7 +142,7 @@
 
         <section id="culture" class="my-24 text-center">
             <h2 class="section-title">Cultura & Colaboração: A Força das Equipes</h2>
-            <p class="section-subtitle">A pesquisa revela uma base sólida de respeito, apoio e segurança psicológica no nível das equipes. Os colaboradores sentem-se à vontade para inovar e colaborar, um ativo fundamental para a organização.</p>
+            <p class="section-subtitle">A pesquisa revela uma base sólida de respeito, apoio e segurança psicológica no nível das equipes. As pessoas servidoras sentem-se à vontade para inovar e colaborar, um ativo fundamental para a organização.</p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="bg-white p-6 rounded-xl shadow-md text-left">
                     <span class="text-4xl">💡</span>
@@ -193,7 +193,7 @@
                          <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                             <div>
                                 <h3 class="text-2xl font-bold text-navy mb-2">O Receio da Punição</h3>
-                                <p class="text-gray-700 mb-4">Embora a confiança entre colegas seja alta, 11% dos colaboradores ainda acreditam que um erro cometido será usado contra eles. Este medo não vem dos pares, mas aponta para uma percepção de consequências sistêmicas ou gerenciais negativas.</p>
+                                <p class="text-gray-700 mb-4">Embora a confiança entre colegas seja alta, 11% das pessoas servidoras ainda acreditam que um erro cometido será usado contra eles. Este medo não vem dos pares, mas aponta para uma percepção de consequências sistêmicas ou gerenciais negativas.</p>
                                 <p class="text-gray-700 font-semibold">Esse receio pode inibir a tomada de riscos e a inovação, criando uma cultura onde a segurança é priorizada em detrimento da aprendizagem.</p>
                             </div>
                             <div class="chart-container">
@@ -206,7 +206,7 @@
                             <div>
                                 <h3 class="text-2xl font-bold text-navy mb-2">Apoio à Saúde Mental: Uma Demanda Clara</h3>
                                 <p class="text-gray-700 mb-4">Quase 10% dos respondentes sentem que sua saúde mental não é considerada ou apoiada. A percepção é que o suporte depende mais dos colegas do que de um programa estruturado pela organização.</p>
-                                <blockquote class="border-l-4 border-orange pl-4 italic text-gray-600">"Acredito que a saúde mental não é devidamente valorada pela gestão. Não há diálogos sobre isso, fazer uma reunião a cada 3 ou 6 meses não resolve..." - <span class="font-semibold">Comentário de um colaborador.</span></blockquote>
+                                <p class="text-gray-700 font-semibold">Essa falta de políticas consistentes pode gerar desgaste emocional e reduzir o engajamento das pessoas servidoras.</p>
                             </div>
                             <div class="chart-container">
                                 <canvas id="mentalHealthChart"></canvas>
@@ -218,21 +218,21 @@
         </section>
 
         <section id="security" class="my-24 bg-red-50 p-8 rounded-xl">
-            <h2 class="section-title text-center text-orange">Segurança Psicológica: Um Alerta Crítico</h2>
-            <p class="section-subtitle text-center">Esta é a área mais preocupante revelada pela pesquisa. A alta incidência de exposição ao assédio, combinada com lacunas na prevenção e treinamento, exige ação imediata e contundente para garantir um ambiente de trabalho verdadeiramente seguro.</p>
+            <h2 class="section-title text-center text-orange">Segurança Psicológica: Ponto de Atenção Relevante</h2>
+            <p class="section-subtitle text-center">Os resultados da pesquisa indicam que este é um dos aspectos que merece maior atenção. Os relatos de situações de assédio, aliados a lacunas em ações de prevenção e capacitação, demonstra a necessidade de avançar em medidas que promovam um ambiente de trabalho psicologicamente seguro.</p>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
                 <div class="text-center">
-                    <p class="text-7xl md:text-8xl font-black text-orange">1 em cada 3</p>
-                    <p class="text-2xl font-bold text-gray-800 mt-2">colaboradores já presenciou ou sofreu assédio.</p>
-                    <p class="mt-4 text-gray-600">Este dado de 34,6% contrasta com a percepção de que a cultura da equipe é intolerante ao assédio, indicando que os incidentes ocorrem apesar das boas intenções dos pares e apontam para uma falha sistêmica.</p>
-                     <blockquote class="mt-6 text-left border-l-4 border-orange pl-4 italic text-gray-600 text-sm">"Eu não só vivenciei momentos de assédio como também presenciei colegas sendo assediados... Foram momentos terríveis que desencadeavam enfermidades na alma, como angústias, crises de ansiedades e depressão." - <span class="font-semibold">Relato de um colaborador.</span></blockquote>
+                    <p class="text-2xl font-bold text-gray-800 mt-2">Destaca-se que</p>
+                    <p class="text-5xl md:text-5xl font-black text-orange">1 em cada 3</p>
+                    <p class="text-2xl font-bold text-gray-800 mt-2">pessoas servidoras já presenciaram ou sofreram assédio.</p>
+                    <p class="mt-4 text-gray-600">Esse dado contrasta com a percepção de que a cultura da equipe se mostra intolerante a tais práticas, evidenciando que, embora haja boas intenções coletivas, os incidentes ainda ocorrem e sinalizam a existência de fragilidades de caráter sistêmico.</p>
                 </div>
                 <div>
                      <h3 class="text-xl font-bold text-navy mb-4 text-center">A Lacuna no Treinamento é uma Barreira Crítica</h3>
                     <div class="chart-container" style="height: 300px; max-height: 350px;">
                         <canvas id="harassmentTrainingChart"></canvas>
                     </div>
-                    <p class="mt-4 text-sm text-gray-600 text-center">Um total de 63% dos colaboradores nunca ou raramente recebeu treinamento sobre o tema. A falta de conhecimento sobre como identificar e denunciar o assédio é um obstáculo fundamental para a prevenção eficaz.</p>
+                    <p class="mt-4 text-sm text-gray-600 text-center">Um total de 63% das pessoas servidoras nunca ou raramente recebeu treinamento sobre o tema. A falta de conhecimento sobre como identificar e denunciar o assédio é um obstáculo fundamental para a prevenção eficaz.</p>
                 </div>
             </div>
         </section>
@@ -502,5 +502,3 @@
     </script>
 </body>
 </html>
-
-
